Config the webpack to work correctly with html components

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,10 +1,7 @@
-@height: 5rem;
-@width: @height + 5rem;
+#page-content {
+  flex: 1 0 auto;
+}
 
-@background: #212121;
-
-#title {
-  width: @width;
-  height: @height;
-  background-color: @background;
+#sticky-footer {
+  flex-shrink: none;
 }
